llvm/test/Assembler/byref-parse-error-1.ll
; RUN: not llvm-as < %s 2>&1 | FileCheck %s

; CHECK: <stdin>:[[@LINE+1]]:35: error: expected type{{$}}
define void @test_byref(i8* byref() {
  ret void
}
